fix: start to remove <br> tags add: back btn box with and without contrast

--- a/host/front-end/CSS/style.css
+++ b/host/front-end/CSS/style.css
@@ -47,7 +47,7 @@
     top: 0%;
     left: 0%;
 }
-.btn:hover:not(.border, .btn-outline-success, .btn-outline-secondary, .btn-outline-danger, #intra_login){
+.btn:hover:not(.border, .btn-outline-success, .btn-outline-secondary, .btn-outline-danger, .color_btn, #intra_login){
     transition: 1s;
     transform: scale(1.2);
 }
